#    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
#    GNU General Public License for more details.
#
#    You should have received a copy of the GNU General Public License
#    along with this program.  If not, see <http://www.gnu.org/licenses/>.
#
################################################################


2013-12-15  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.99999971 released.

        * Implemented FA_Sudo to enable a user to emulate
          another user. Useful for schedulers that run as
          root or SYSTEM on Windows.


2013-12-14  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.99999970 released.

        * Owner of FullAuto folder can now edit templates
          and fa_global.

        * Changed fa_defs.pm to fa_global.pm.

        * New version of Term::Menus paired with this release.


2013-12-12  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.99999969 released.

        * Can now send attachments with send_email().

        * More work to extend --quiet to include ftp output.


2013-12-11  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.99999968 released.

        * Fixed cwd() when used with sftp only connection.

        * Reworked returning 1 on error requested with cleanup(1).

        * Extended --quiet to include ftp output.


2013-12-10  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.99999967 released.

        * More Development on Import/Export Menu Item.

        * Implemented Return to Admin from Admin sub menus.

        * New version of Term::Menus paired with this release.


2013-12-05  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.99999966 released.

        * More Development on Import/Export Menu Item.


2013-12-04  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.99999965 released.
