@@ -14,11 +14,11 @@ not run its Makefile.PL or Build.PL.
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-SHA1 8ace34a65ffb9a1f4ce69ce8d193a911be0620ef ChangeLog
+SHA1 b08d72da811ff6de52ffca3f877b71329e9f870f ChangeLog
 SHA1 5437f164ae11b18bb58a8576204254a1b4a9334b LICENSE
 SHA1 1d292a0e6dba2ce264985cc3004ff0dc9b298bfc MANIFEST
-SHA1 10bbc424b8cb0e431ae6085e93875b2605e41fd0 META.yml
-SHA1 dd7cf463789dae2eca62ecd25b25bb39134fdec7 Makefile.PL
+SHA1 d317450f4a9a57afb18eb395b68138ee96553c16 META.yml
+SHA1 44c7deed86ad64a3b331626857f38ce6e2cc112e Makefile.PL
 SHA1 3963e2adaaaf4dabdd2d22748334db30cefedb97 README
 SHA1 ecb089134bba590f02aa974be5a6e86d72cdb0dc UNINSTALL_CYGWIN
 SHA1 a6e007f1056d6fb4aa4e9d94707740c364f074a7 bin/fullauto.pl
@@ -37,7 +37,7 @@ SHA1 d3a4c720c6ec7f8fce7df37002fbc9177fb77050 inc/Module/Install/Scripts.pm
 SHA1 5457015ea5a50e93465bf2dafa29feebd547f85b inc/Module/Install/Win32.pm
 SHA1 051e7fa8063908befa3440508d0584a2497b97db inc/Module/Install/WriteAll.pm
 SHA1 225dc1fa8a31e86954f43fb8e6a2060c9c54e6f8 install_mozrepl_plugin.ahk
-SHA1 6e935ef03c0abc35f4149de1804b517bb2ba39f9 lib/Net/FullAuto.pm
+SHA1 ed01ee28c037c05012b8c43980cec7b28962588d lib/Net/FullAuto.pm
 SHA1 da4cad3f90b32301fad4f5a910b67b37c5105b49 lib/Net/FullAuto/Custom/BackUp/README
 SHA1 966d316495dc2c924ba00e0eaa065391a8c967c5 lib/Net/FullAuto/Custom/README
 SHA1 931b73137675e23ff80148d72aa09415fdb164af lib/Net/FullAuto/Distro/fa_code.pm
@@ -48,17 +48,17 @@ SHA1 652187d2e9b92347b5ce4622086b2314ad9962ee lib/Net/FullAuto/Distro/fa_maps.pm
 SHA1 35b0f57527b9813d39d63df1e3db84fdc13e9514 lib/Net/FullAuto/Distro/fa_menu.pm
 SHA1 e0f261e25b722eb59848bcd0a9ee2936a6cc5d87 lib/Net/FullAuto/Distro/fa_menu_demo.pm
 SHA1 c61c03f9beda14559fdf07e569e813a2bd553a53 lib/Net/FullAuto/Distro/fullautologo.jpg
-SHA1 097afe79c00236b24f091292e4a3e7d6466ea23d lib/Net/FullAuto/FA_Core.pm
+SHA1 46619cca8b5e1a9f714cd5b744d471ba2ac5ad87 lib/Net/FullAuto/FA_Core.pm
 SHA1 7f2e13f5f6a798d52ea897d24d07b49af4039341 t/0-signature.t
 SHA1 6fac6b17647d05b71441ac3783ceec38b9b71fa6 t/test.t
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1.4.13 (Cygwin)
 
-iQEcBAEBAgAGBQJSrnjzAAoJEBa/9Pad787Eh/wH/2/Rv9cA9k+M+C2w1ScllK+n
-j6e4NHt3AQWYRA7RtgzSXN3bTLb4TUGyu1d92qGk0KyH+nhFYRC8R4nD23Edn2UX
-SKjYePNWIpJ5BsjPDggX8c5NBgnMRKBc1esmBHVdAstiyXFLfl8CetUubz/U17Pz
-IFe2Gq7m8BPSdwk8hRhZjkhbCfvjw0B3NxUBDJqDd9XYPwZPClShruU3efb0xBWm
-NYovXUM8DzyRx/lSq69WFCLqw0vgazRIdu644fHFmxX6TK3sVRU8uv6BbvNhwyXx
-A78x237YrC1RQ8C957LjqRolEaP/s7belzo2EIO6ARe4bkgQHed8tMpSVqjsYiw=
-=sPJ2
+iQEcBAEBAgAGBQJSrwWJAAoJEBa/9Pad787EaQEIAJ3t378Nx4qPeQjRmBvXFIje
+J25pD4ZBDYlQZpXjRKcPbu+fwo7TMOXQG0IWAaoEKdbi0G+f+QWh1g+dwpVAx9dj
+zo8vbJEIKXd93pO7Ey27sEgF2j6gjDg2RaoDR6P+2ieRxXpRlAtTKBuhjaBzMUHT
+AksIzAMkSvlht89dmQWrDnPZpzyN1wGm7o8m5dsb5CLBI3mzOzrlScz86MKvNkZ0
+/ZTA1eg1CMwEMXk95CLGYvgqjAzZ2Z20UGgWqFzp3KJzbCWwMwA+FlZF/dOuYZoG
+uY0Xo275ek/Cj0NHlLK7mUeoLyV/QaFX3jCTtWTiWHdZmIvf6MR/ZAa3glPx3N4=
+=/Uhr
 -----END PGP SIGNATURE-----
